# speculation-game-info

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  smoke_test.py
.claude/: settings.local.json
analysis/: stylized_facts.py  tail_exponent.py  volatility_clustering.py
archive/jreit_v1/: README.md
docs/: findings.md  hypotheses.md  literature.md
experiments/01_baseline_type_c/: README.md
experiments/02_homogeneous_type_v/: README.md
experiments/03_mixed_sweep/: README.md
experiments/04_signal_collapse/: README.md
experiments/05_endogenous_switch/: README.md
experiments/YH001/: README.md  memo.txt  model.py  run_simulation.py  tail_analysis.py
experiments/YH002/: README.md  memo.txt  model.py  run_simulation.py
experiments/YH003/: README.md  model.py  run_simulation.py
experiments/YH004/: README.md  model.py  run_simulation.py
experiments/YH005/: README.md  YH005_PLAN.md  _mg_gcmg_baseline.py  analysis.py  baseline.py  compare_three_models.py  history.py  model.py  null_tests.py  run_simulation.py  simulate.py
experiments/YH005_1/: README.md  phase1_mechanism_figures.py
experiments/YH006/: .gitignore  README.md  SPEC.md  aggregate_sim.py  calibrate_c_ticks.py  compare_figure.py  custom_saver.py  history_broadcast.py  load_c0.py  memo.txt  mm_fcn_agent.py  profile_c3_plan_a.py  run_aggregate_c0.py  run_experiment.py  smoke_test.py  speculation_agent.py  yh006_to_yh005_adapter.py
experiments/YH006_1/: GLOSSARY.md  OVERVIEW.md  README.md  (+1 more)
results/: REPORT_clean_model.md
src/: config.py  run.py  simulation.py
(+2281 files in other folders)
