[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jreit-abm"
version = "0.1.0"
description = "Agent-Based Model of J-REIT market extending Katahira-Chen (2019) Speculation Game"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "lightgbm>=4.0",
    "scipy>=1.11",
    "tqdm>=4.66",
    "pandas-ta>=0.3",
    "japanize-matplotlib>=1.1",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "ipykernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
